--- a/app/src/main/res/layout/content_edit_contact.xml
+++ b/app/src/main/res/layout/content_edit_contact.xml
@@ -53,7 +53,7 @@
             android:layout_height="55dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView3"
             app:layout_constraintTop_toBottomOf="@+id/txtContactNameLayout">
 
             <android.support.design.widget.TextInputEditText
@@ -90,10 +90,9 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtContactCityLayout"
+            app:layout_constraintStart_toEndOf="@+id/imageView4"
 
-            >
+            app:layout_constraintTop_toBottomOf="@+id/txtContactCityLayout">
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/txtContactInsta"
@@ -111,7 +110,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView5"
             app:layout_constraintTop_toBottomOf="@+id/txtContactInstaLayout">
 
             <android.support.design.widget.TextInputEditText
@@ -130,7 +129,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView6"
             app:layout_constraintTop_toBottomOf="@+id/txtContactFaceLayout">
 
             <android.support.design.widget.TextInputEditText
@@ -147,9 +146,52 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginStart="8dp"
+
+
             app:layout_constraintBottom_toBottomOf="@+id/txtContactNameLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/ic_person_24dp" />
+
+        <ImageView
+
+            android:id="@+id/imageView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/txtContactCityLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/ic_location_city_24dp" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="23dp"
+            android:layout_height="21dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/txtContactInstaLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/ic_instagram" />
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/txtContactFaceLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/ic_facebook" />
+
+        <ImageView
+            android:id="@+id/imageView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginStart="8dp"
+            app:layout_constraintBottom_toBottomOf="@+id/txtContactMeetLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/ic_my_location_24dp" />
 
 
     </android.support.constraint.ConstraintLayout>
